# QuickDesk

./: .gitignore  CMakeLists.txt
QuickDesk/: CMakeLists.txt
QuickDesk/qml/quickdeskcomponent/: FloatingToolButton.qml
QuickDesk/qml/views/: RemoteWindow.qml
QuickDesk/src/controller/: MainController.cpp  MainController.h
QuickDesk/src/manager/: ClientManager.cpp  ClientManager.h  CloudDeviceManager.cpp  CloudDeviceManager.h  FtpManager.cpp  FtpManager.h  HostManager.cpp  ProcessManager.cpp  ProcessManager.h
SignalingServer/: Dockerfile
SignalingServer/docs/: user-api-docs.md
SignalingServer/internal/handler/: device_handler.go  host_handler.go  realtime_handler.go
SignalingServer/internal/service/: event_bus.go  rate_limit_service.go
WebClient/src/api/: userSync.js
scripts/: build_qd_mac.sh  package_qd_mac_all.sh  package_qd_win_all.bat  publish_qd_mac.sh
